chwcom-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chwcom
  labels:
    app: chwcom
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: chwcom
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chwcom
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: chwcom
            topologyKey: kubernetes.io/hostname      
      containers:
      - image: jkozik/chw.com:v1.13
        name: chwcom
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            ephemeral-storage: 100M
            memory: 100M
          limits:
            ephemeral-storage: 200M
            memory: 200M
        ports:
        - containerPort: 80
          name: chwcom
        volumeMounts:
        - name: chwcom-persistent-storage
          mountPath: "/var/www/html/mount" 
      volumes:
      - name: chwcom-persistent-storage
        persistentVolumeClaim:
          claimName: chwcom-persistent-storage
