chwcom-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chwcom
  labels:
    app: chwcom
spec:
  ports:
    - port: 80
  selector:
    app: chwcom
  type: NodePort
