chwcom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chwcom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
      #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  #tls:
  #- hosts:
  #- camptonhillsweather.com
  #secretName: camptonhillsweather-com-tls
  #ingressClassName: nginx
  rules:
  - host: camptonhillsweather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chwcom
            port:
              number: 80
